--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>minha namorada</title>
 </head>
 <body>
-    
+    <header>minha namorada</header>
+
+    <section class="chamada">
+    <div class="chamada-texto">
+        
+    </div>
+</section>
 </body>
 </html>
